# ContReAct-Ollama

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  collatz_correlation_10000000.json  collatz_parity_10000000.json  collatz_piecewise_correction_10000000.json  collatz_regression_10000000.json  collatz_residuals_mod16_10000000.json  collatz_residuals_mod8_10000000.json  collatz_results_10000.json  collatz_results_10000000.json  dashboard.py  gap_analysis.md  prime_gap_analysis_10000000.json  pyproject.toml  review_checklist.md  review_summary.md  run_pei_assessment.py  test_telegram_fix.py
.ai/: bug-tool-call-parsing-error-recovery.md  qa-improvement-plan-story-2.9.md  sprint-change-proposal-story-2.10-memory-viewer.md  sprint-change-proposal-story-2.7-filtering.md
.bmad-core/: install-manifest.yaml
.clinerules/: 08-dev.md
configs/: sample-config.yaml
contreact_ollama/: constants.py  ui_utils.py
contreact_ollama/analysis/: __init__.py  embedding_service.py  similarity_monitor.py
contreact_ollama/communication/: __init__.py  channel_protocol.py  telegram_channel.py  telegram_service.py  terminal_channel.py
docs/: SoftwareDesignSpecification.md  WhatDoLLMAgentsDoWhenLeftAlone.md  architecture.md  brief.md  front-end-spec.md  parameter-tuning-guide.md  po-validation-report.md  prd.md  reasoning-handling-approach.md  telegram-setup-guide.md  troubleshooting-json-parsing-errors.md
docs/architecture/: index.md  (+21 more)
pages/: 1_🧪_experiment_configuration.py  2_📊_results_dashboard.py
scripts/: analyze_experiment_log.py  check_tool_calls.py  collatz_analysis.py  collatz_correlation.py  collatz_parity_analysis.py  collatz_piecewise_correction.py  collatz_regression_analysis.py  collatz_residuals_mod16.py  collatz_residuals_mod8.py  debug_llama_response.py  format_log.py  prime_gap_analysis.py  run_experiment.py  test_all_models_tool_support.py  test_all_ollama_models.py  test_model_tool_support.py  verify_fixes.py
(+100 files in other folders)
